# binf-6310_gan-wgcna

./: .gitignore  LICENSE  README.md  pyproject.toml
analysis/00_data-gathering/: 00_download-src-data.ipynb  01_confirm-data.ipynb  Adam_prediction.py  GAN_training.ipynb  Original data.ipynb  WGAN_GP.py  data-cleaning.ipynb  download-src-data.ipynb  inspect_tool.py  ops.py  utils.py
analysis/01_data-preprocessing/: 01_ Save-Voom-Analysis-Result-R.ipynb  01_voom-data-preprocessing.ipynb  data-cleaning.ipynb
analysis/02_GAN/: GAN.ipynb
analysis/03_latent-space-interpolation/: latent-space.ipynb
analysis/04_wgcna/: wgcna.ipynb
analysis/05_gene-ontology/: gene-ontology.ipynb
analysis/06_rescued-DEG/: rescued-DEG.ipynb
